--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "chance": "^1.0.2",
     "express": "^4.13.4",
     "jquery": "^3.6.1",
-    "md5": "^2.1.0"
+    "md5": "^2.1.0",
+    "timeago": "^1.6.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
